force-app/main/default/objects/vlocity_cmt__ProductEligibility__c/vlocity_cmt__ProductEligibility__c.object-meta.xml
<CustomObject>
    <description>This object provides the option for products to be denoted as ineligible under certain circumstances. For example, a product may not be eligible for an account unless that account is a business account with a Gold level SLA (Service Level Agreement). Such exceptions are defined within this object.</description>
    <label>Product Not Eligible</label>
    <nameField>
        <label>Product Not Eligible Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Not Eligible</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>