force-app/main/default/objects/vlocity_cmt__ProductEligibility__c/fields/vlocity_cmt__AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountRecordType__c</fullName>
    <label>Account Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Billing Aggregator</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Service Aggregator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>