force-app/main/default/objects/vlocity_cmt__ProductEligibility__c/fields/vlocity_cmt__AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AnnualRevenue__c</fullName>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>