force-app/main/default/objects/vlocity_cmt__ProductEligibility__c/fields/vlocity_cmt__Pricebook2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Pricebook2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipName>ProductEligibilityPricebook</relationshipName>
    <type>Lookup</type>
</CustomField>